// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render additional data only when user is logged in 1`] = `
.c1 {
  radius-border: 5px;
  height: 50px;
  margin-right: 10px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  min-width: 100%;
}

.c2 {
  font-size: 20px;
  font-family: verdana;
}

.c4 {
  font-size: 14px;
  font-family: verdana;
  margin-left: 400px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <img
      class="c1"
      src="calculator.svg"
    />
    <h2
      class="c2"
    >
      calculator
    </h2>
    <div
      class="c3"
    >
      <div>
        <h3
          class="c4"
          data-testid="greet-message"
        >
          Hi 
          Test-username
          , currently connected users: 
          1
        </h3>
      </div>
      <button
        data-testid="logout-button"
        type="button"
      >
         logout
      </button>
    </div>
  </div>
</div>
`;

exports[`Header should render the component 1`] = `
.c1 {
  radius-border: 5px;
  height: 50px;
  margin-right: 10px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  min-width: 100%;
}

.c2 {
  font-size: 20px;
  font-family: verdana;
}

<div>
  <div
    class="c0"
  >
    <img
      class="c1"
      src="calculator.svg"
    />
    <h2
      class="c2"
    >
      calculator
    </h2>
  </div>
</div>
`;
